# event-driven-pipeline-scaffold

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
infra/kafka/: topics.sh
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
src/: config.py  main.py
src/ai/: async_processor.py  batch_processor.py  init.py  inline_scorer.py  model_client.py
src/alerting/: dedup.py  init.py  jira.py  slack.py
src/api/: dependencies.py  init.py
src/api/routers/: alerts.py  events.py  health.py  vulnerabilities.py
src/ingestion/: init.py  producer.py  schemas.py
src/ingestion/sources/: ai_hooks.py  ebpf.py  sdk_agent.py  threat_feeds.py
src/observability/: init.py  logging.py  metrics.py
src/processing/: enricher.py  idempotency.py  init.py  joiner.py  pending.py  threat_engine.py
src/storage/: db.py  init.py
src/storage/repositories/: alerts.py  events.py  libraries.py  vulnerabilities.py
src/streaming/: consumer.py  dlq.py  init.py  router.py
tests/integration/: test_api_events.py  test_consumer_pipeline.py
tests/unit/alerting/: test_dedup.py
tests/unit/processing/: test_enricher.py  test_idempotency.py  test_joiner.py
