[project]
name = "oligo-backend"
version = "0.1.0"
description = "Runtime security backend scaffold inspired by Oligo Security"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiokafka>=0.13.0",
  "asyncpg>=0.31.0",
  "fastapi>=0.135.3",
  "grpcio>=1.80.0",
  "httpx>=0.28.1",
  "orjson>=3.11.8",
  "prometheus-client>=0.25.0",
  "pydantic-settings>=2.13.1",
  "redis>=7.4.0",
  "structlog>=25.5.0",
  "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
